--- a/background.html
+++ b/background.html
@@ -20,6 +20,8 @@
   <script src="background/block.js"></script>
   <!-- 前端传递消息 -->
   <script src="background/message.js"></script>
+  <!--关闭webrtc-->>
+  <script src="background/webrtc.js"></script>
 </head>
 
 <body>
